2001-10-30 11:01 GMT Dave Pearson <davep@davep.org>
   * source/rtl/filesys.c
     * Fixed the Un*x oriented code in hb_fsMkDir so that it sets
       S_IXUSR as well as S_IWUSR and S_IRUSR when making the directory.
       Without it the directory can't be entered or used.
	
2001-10-29 14:14 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/mysql/readme.txt
     * updated
   - contrib/mysql/mysql.h
   - contrib/mysql/mysql_com.h
   - contrib/mysql/mysql_version.h
     - removed OS/2 only include files

2001-10-27 22:40 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
  * contrib/mysql/mysql.c
    * Fixed an small bug on SQLCONNECT
  *utils/hbmake/hbmutils.prg
    * Fixed an small bug, on GetSourceFiles() and GetMacrosDir() with was not returning
      the valid files names/directory names under linux

2001-10-27 20:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx1.c
    * logical index support added ( code posted by Matteo Baccan )
  ! source/pp/pplib.c
    ! bug fixed in __pp_free() function

2001-10-27 06:50 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * hb_slex.vc
      * Make file sincronized with makefile.vc thanks to Ron Pinkas <ron@profit-master.com>forn this file update
   * contrib/hbzlib/zipnew.cpp
     contrib/hbzlib/zip.c
       * Fixed an small bug when uncompressing File that has the drive letter

2001-10-26 15:21 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     * OrderListAdd now reorder the Tag List of the opened CDX by its
       position in the CDX instead of its tag name. (for Clipper
       compatibility)

2001-10-26 13:15 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     * Re-disabled temporally SUPER call to ignore unsupported ordinfo items

2001-10-26 00:10 GMT Dave Pearson <davep@davep.org>
   * source/compiler/harbour.c
      * Tidied up the indentation of the functions towards the end of the